2010-07-08  Jan Djärv  <jan.h.d@swipnet.se>

	* xmenu.c (set_frame_menubar, create_and_show_popup_menu)
	(create_and_show_dialog): Don't call apply_systemfont_to_(menu|dialog)
	unless USE_LUCID.

2010-07-08  Dan Nicolaescu  <dann@ics.uci.edu>

	* xdisp.c (store_mode_line_noprop_char): Remove K&R alternative declaration.

	Clean up include guards.
	* tparam.c: Remove include guards for config.h, string.h and code
	that assumes #ifndef emacs.
	* termcap.c:
	* unexalpha.c:
	* sysdep.c:
	* filemode.c:
	* filelock.c:
	* bidi.c: Likewise.

	Remove prefix-args.c
	* prefix-args.c: Remove file.
	* autodeps.mk (ALLOBJS): Remove reference to prefix-args.
	* Makefile.in (temacs${EXEEXT}): Remove references to
	PRE_EDIT_LDFLAGS and POST_EDIT_LDFLAGS.
	(mostlyclean): Remove reference to prefix-args.
	(prefix-args): Remove.

	Simplify cstart_of_data, start_of_code and related code.
	* mem-limits.h: Remove !emacs and _LIBC conditional code.
	(start_of_data): Merge into start_of_data function.
	* sysdep.c (start_of_text): Remove.  Move simplified versions of
	it in the only users: unexaix.c and unexec.c.
	(read_input_waiting): Remove local declaration of quit_char.
	(start, etext): Remove declarations.
	(start_of_data): Merge with the version in mem-limits.h and move
	to vm-limits.c.
	* vm-limit.c (start_of_data): Merged and simplified version of the
	code formerly in mem-limits.h and sysdep.c.
	* unexec.c (start): New declaration, moved from sysdep.c.
	(start_of_text): Simplified version of the code formerly in sysdep.c.
	* unexaix.c (start_of_text): Simplified version of the code
	formerly in sysdep.c.
	* m/alpha.h (HAVE_TEXT_START): Remove.
	(TEXT_START): Move ...
	* unexalpha.c (TEXT_START): ... here.
	* s/hpux10-20.h (TEXT_START): Remove.
	* s/darwin.h (TEXT_START):
	* m/mips.h (TEXT_START):
	* m/macppc.h (HAVE_TEXT_START):
	* m/m68k.h (TEXT_START):
	* m/iris4d.h (TEXT_START):
	* m/intel386.h (TEXT_START):
	* m/ibmrs6000.h (TEXT_START):
	* m/ia64.h (HAVE_TEXT_START):